--- a/css/style.css
+++ b/css/style.css
@@ -290,13 +290,22 @@ body._hold {
   padding-right: 0.9375rem;
 }
 .bank__count._no-money {
-  animation: no-money 0.5s ease 2;
+  animation: blur 0.5s ease-out 2;
 }
 .bank__count._delete-money {
   animation: delete-money 0.5s ease;
 }
 .bank__count._anim-add-money {
   animation: add-money 0.5s ease 2;
+}
+.bank img._anim-icon-jump {
+  animation: jump_icon 5s ease;
+}
+.bank img._anim-icon-scale {
+  animation: scale_icon 0.5s ease 2;
+}
+.bank img._anim-icon-rotate {
+  animation: rotate_icon 1.5s ease-out 1;
 }
 
 .item-info {
@@ -310,65 +319,6 @@ body._hold {
   background: url("../img/icons/arrow-left.svg") center 35%/33px 26px no-repeat, #2b4160;
   width: 3.125rem;
   height: 2.125rem;
-}
-
-.item-game {
-  background: #019fe0 !important;
-}
-.item-game__body {
-  margin: 0.9375rem;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
-}
-.item-game__header {
-  display: flex;
-  justify-content: flex-end;
-  flex: 1 1 auto;
-}
-.item-game__coin {
-  position: absolute;
-  top: 10%;
-  left: 15%;
-  perspective: 2000px;
-  width: 155px;
-  height: 160px;
-}
-.item-game__coin._rotate .head {
-  animation: front-rotation 0.3s linear infinite;
-}
-.item-game__coin._rotate .tail {
-  animation: back-rotation 0.3s linear infinite;
-}
-.item-game__coin._rotate-normal .head {
-  animation: front-rotation 0.5s linear infinite;
-}
-.item-game__coin._rotate-normal .tail {
-  animation: back-rotation 0.5s linear infinite;
-}
-.item-game__coin._rotate-low .head {
-  animation: front-rotation 0.8s linear infinite;
-}
-.item-game__coin._rotate-low .tail {
-  animation: back-rotation 0.8s linear infinite;
-}
-.item-game__bet-box {
-  margin-bottom: 1.6875rem;
-}
-.item-game__bets {
-  margin-bottom: 0.625rem;
-}
-.item-game__buttons {
-  display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
-  align-items: flex-end;
-}
-.item-game__button {
-  align-self: end;
-}
-.item-game__button-back {
-  margin-left: 1.25rem;
 }
 
 .bets {
@@ -478,6 +428,11 @@ body._hold {
   color: #ffffff;
 }
 
+.shop {
+  opacity: 0;
+  transform: translateY(50px);
+  animation: show_page 0.5s ease 0.4s forwards;
+}
 .shop__body {
   width: 100%;
   min-height: 100vh;
@@ -550,6 +505,9 @@ body._hold {
 }
 .game__item {
   background: #0278a9;
+  opacity: 0;
+  transform: translateX(-100%);
+  animation: show_item 0.5s ease-out 0.4s forwards;
 }
 .game__history {
   margin: 0.9375rem;
@@ -575,6 +533,13 @@ body._hold {
 .game__block img {
   width: 2.375rem;
 }
+.game__block._active .icon-head,
+.game__block._active .icon-tail {
+  animation: rotate_icon 1.5s ease;
+}
+.game__block._active .game__sub-count {
+  animation: bank_down 0.5s ease-in;
+}
 .game__sub-title {
   font-weight: 900;
   font-size: 1.25rem;
@@ -591,6 +556,71 @@ body._hold {
   color: #ffffff;
   -webkit-text-stroke: 1px #000;
   min-width: 2.5rem;
+}
+.game__sub-count._active {
+  animation: bank_down 0.5s ease-in;
+}
+
+.item-game {
+  background: #019fe0 !important;
+  opacity: 0;
+  transform: translateX(100%);
+  animation: show_item 0.5s ease-out 0.4s forwards;
+}
+.item-game__body {
+  margin: 0.9375rem;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+.item-game__header {
+  display: flex;
+  justify-content: flex-end;
+  flex: 1 1 auto;
+}
+.item-game__coin {
+  position: absolute;
+  top: 10%;
+  left: 15%;
+  perspective: 2000px;
+  width: 155px;
+  height: 160px;
+}
+.item-game__coin._rotate .head {
+  animation: front-rotation 0.3s linear infinite;
+}
+.item-game__coin._rotate .tail {
+  animation: back-rotation 0.3s linear infinite;
+}
+.item-game__coin._rotate-normal .head {
+  animation: front-rotation 0.5s linear infinite;
+}
+.item-game__coin._rotate-normal .tail {
+  animation: back-rotation 0.5s linear infinite;
+}
+.item-game__coin._rotate-low .head {
+  animation: front-rotation 0.8s linear infinite;
+}
+.item-game__coin._rotate-low .tail {
+  animation: back-rotation 0.8s linear infinite;
+}
+.item-game__bet-box {
+  margin-bottom: 1.6875rem;
+}
+.item-game__bets {
+  margin-bottom: 0.625rem;
+}
+.item-game__buttons {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  align-items: flex-end;
+}
+.item-game__button {
+  align-self: end;
+}
+.item-game__button-back {
+  margin-left: 1.25rem;
 }
 
 .tail {
@@ -737,6 +767,9 @@ body._hold {
 .catgame__header {
   display: flex;
   justify-content: space-between;
+  opacity: 0;
+  transform: translateY(-50%);
+  animation: show_page 0.5s ease 0.7s forwards;
 }
 .catgame__hero {
   position: absolute;
@@ -761,6 +794,11 @@ body._hold {
 .catgame__hero._active {
   animation: rotate_cat 0.5s ease 0.2s infinite;
 }
+.catgame__hero._start-anim {
+  opacity: 0;
+  transform: translateX(-50%);
+  animation: show_item 0.5s ease 0.7s forwards;
+}
 .catgame__fire {
   transform: scale(0);
   transition: all 0.3s ease 0s;
@@ -777,6 +815,9 @@ body._hold {
   bottom: 0;
   left: 0;
   right: 0;
+  opacity: 0;
+  transform: translateY(50%);
+  animation: show_page 0.5s ease 0.7s forwards;
 }
 .catgame__bets {
   flex: 0 1 65%;
@@ -842,5 +883,73 @@ body._hold {
   }
   100% {
     transform: rotate(0deg);
+  }
+}
+@keyframes blur {
+  from {
+    text-shadow: 0px 0px 3px rgb(255, 0, 0), 0px 0px 3px rgb(255, 0, 0), 0px 0px 9px rgb(255, 0, 0), 0px 0px 9px rgb(255, 0, 0), 0px 0px 9px rgb(255, 0, 0), 0px 0px 9px rgb(255, 0, 0), 0px 0px 9px rgb(255, 0, 0), 0px 0px 9px rgb(255, 0, 0), 0px 0px 18px rgb(255, 0, 0), 0px 0px 18px rgb(255, 0, 0);
+  }
+}
+@keyframes jump_icon {
+  0%, 69% {
+    transform: translate(0, 0);
+  }
+  77% {
+    transform: translate(0, -10px);
+  }
+  80% {
+    transform: translate(0px, 0px);
+  }
+  82% {
+    transform: translate(0px, -6px);
+  }
+  85% {
+    transform: translate(0px, 0px);
+  }
+  87% {
+    transform: translate(0px, -2px);
+  }
+  90% {
+    transform: translate(0px, 0px);
+  }
+  100% {
+    transform: translate(0px, 0px);
+  }
+}
+@keyframes scale_icon {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.2);
+  }
+}
+@keyframes rotate_icon {
+  0% {
+    transform: rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+@keyframes bank_down {
+  100% {
+    transform: translateY(5px);
+    opacity: 0;
+  }
+}
+@keyframes show_page {
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes show_item {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
   }
 }
