--- a/css/style.css
+++ b/css/style.css
@@ -773,23 +773,8 @@ body._hold {
 }
 .catgame__hero {
   position: absolute;
-  top: 35%;
+  bottom: 6.875rem;
   left: 0;
-}
-@media (min-height: 21.875em) {
-  .catgame__hero {
-    top: 40%;
-  }
-}
-@media (min-height: 24.375em) {
-  .catgame__hero {
-    top: 45%;
-  }
-}
-@media (min-height: 26.25em) {
-  .catgame__hero {
-    top: 50%;
-  }
 }
 .catgame__hero._active {
   animation: rotate_cat 0.5s ease 0.2s infinite;
