--- a/css/style.css
+++ b/css/style.css
@@ -400,6 +400,20 @@ body._hold {
   justify-items: center;
   align-items: center;
 }
+.main__body._active .main__item:first-child {
+  transform: translateY(10%);
+  opacity: 0;
+  animation: show_page 0.7s ease 0.6s forwards;
+}
+.main__body._active .main__item:nth-child(2) {
+  transform: translateY(10%);
+  opacity: 0;
+  animation: show_page 0.7s ease 0.6s forwards;
+}
+.main__body._active .main__item:nth-child(3) {
+  transform: translateX(150%);
+  animation: show_item 0.5s ease 0.1s forwards;
+}
 .main__item {
   display: flex;
   flex-direction: column;
@@ -408,6 +422,17 @@ body._hold {
 .main__item:last-child {
   align-self: flex-start;
   align-items: flex-end;
+}
+.main__item:first-child {
+  transform: translateY(10%);
+  opacity: 0;
+}
+.main__item:nth-child(2) {
+  transform: translateY(10%);
+  opacity: 0;
+}
+.main__item:nth-child(3) {
+  transform: translateX(100%);
 }
 .main__icon {
   margin-bottom: 1.75rem;
@@ -773,16 +798,23 @@ body._hold {
 }
 .catgame__hero {
   position: absolute;
-  bottom: 6.875rem;
+  bottom: 6.25rem;
   left: 0;
+  z-index: 5;
 }
-.catgame__hero._active {
+.catgame__hero._active-1 {
   animation: rotate_cat 0.5s ease 0.2s infinite;
+}
+.catgame__hero._active-2 {
+  animation: rotate_cat-2 0.5s ease 0.2s infinite;
+}
+.catgame__hero._active-3 {
+  animation: rotate_cat-3 0.8s ease 0.2s infinite;
 }
 .catgame__hero._start-anim {
   opacity: 0;
   transform: translateX(-50%);
-  animation: show_item 0.5s ease 0.7s forwards;
+  animation: show_item 0.9s ease 1.1s forwards;
 }
 .catgame__fire {
   transform: scale(0);
@@ -860,7 +892,7 @@ body._hold {
   25% {
     transform: rotate(2deg);
   }
-  0% {
+  50% {
     transform: rotate(0deg);
   }
   75% {
@@ -868,6 +900,40 @@ body._hold {
   }
   100% {
     transform: rotate(0deg);
+  }
+}
+@keyframes rotate_cat-2 {
+  0% {
+    transform: rotate(3deg) translateY(0px);
+  }
+  25% {
+    transform: rotate(3deg) translateY(2px);
+  }
+  50% {
+    transform: rotate(3deg) translateY(0px);
+  }
+  75% {
+    transform: rotate(3deg) translateY(2px);
+  }
+  100% {
+    transform: rotate(3deg) translateY(0px);
+  }
+}
+@keyframes rotate_cat-3 {
+  0% {
+    transform: rotate(-3deg) translateY(0px);
+  }
+  25% {
+    transform: rotate(-3deg) translateY(2px);
+  }
+  50% {
+    transform: rotate(-3deg) translateY(0px);
+  }
+  75% {
+    transform: rotate(-3deg) translateY(2px);
+  }
+  100% {
+    transform: rotate(-3deg) translateY(0px);
   }
 }
 @keyframes blur {
